[tool.poetry]
name = "michi-ai"
version = "0.1.1"
description = "Full-duplex speech LLM client for MichiAI"
license = "Apache-2.0"
authors = ["Damian Krystkiewicz <45499236+dkrystki@users.noreply.github.com>"]
homepage = "https://ketsuilabs.io"
repository = "https://github.com/KetsuiLabs/MichiAI"
readme = "README.md"
keywords = ["llm", "speech", "full-duplex", "audio"]
packages = [{include = "michiai"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
